tests/expectations/parser/functions/public_const_param_fail.out
Error [EPAR0370005]: expected an identifier -- found 'const'
    --> test:4:27
     |
   4 | function x(x: u32, public const y: i32) {
     |                           ^^^^^
